Fixed scrollbar issue

--- a/style/index.css
+++ b/style/index.css
@@ -35,6 +35,7 @@ body{
     color: #433740;
     text-transform: capitalize;
     width: 100vw;
+    border:0;
 }
 a{
     text-decoration: none;
@@ -58,6 +59,7 @@ h1{
 font-size: 3rem;
 font-family: cursive;
 margin: 0 2%;
+text-align: center;
 }
 nav{
 font-size: 2.5rem;
@@ -120,7 +122,6 @@ footer{
     justify-content: center;
     align-items: center;
     width: 100vw;
-    margin:auto;
 }
 footer button{
     height:5vh;
@@ -161,7 +162,7 @@ footer button{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100%;
+        width: 90%;
     }
     nav a{
         padding:3%;
